creating the header layout and menus

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,10 @@
 //resets
+@import "base/base";
+// typography
+@import "base/typography";
+//header layout
+@import "layout/header";
+//pages
+@import "pages/home";
+//buttons
+@import "components/buttons";
