--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,9 @@
 $main-color: #ff1616;
 $main-bg-color: #fef4f4;
+$main-secondary-color: rgba(129, 13, 13, 1);
+$book-item-coloring:#FF5700;
 $font-fa-brand: "fa-brands";
 $font-fa-solid: "fa-solid";
 $font-themify: "fa-themify";
 $font-roboto: "roboto";
+$font-roboto-bold:"roboto-bold"
