--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,3 +1,4 @@
+// FIX add animation to button's after
 .btn {
   display: flex;
   align-items: center;
@@ -8,4 +9,18 @@
   color: white !important;
   font-weight: 900 !important;
   font-size: 1.2rem !important;
+  position: relative;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6);
+  overflow: hidden;
+  &:hover::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 102%;
+    height: 102%;
+    border-radius: 50px;
+  }
 }
